# task-tech-exposure

./: LICENSE.txt  README.md  pyproject.toml
src/task-tech-exposure/: __init__.py  calculate_exposure.py  classify_data.py  download_data.py  download_tte.py  modifiedgetdata.py
src/task_tech_exposure/: __init__.py  calculate_exposure.py  classify_data.py  download_tte.py
