[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-tech-exposure"
version = "1.0"
description = "This package implements the methodology of 'Task-Level Measures of Technological Change: A Language Model Approach' (2026). It handles file download and management, data classificaiton, and exposure measure generation."
readme = "README.md"
authors = [
    { name="Andre Mouton", email="moutona@wfu.edu" },
]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "sentence_transformers",
    "torch",
]
license = {text = "MIT"}
license-files = ["LICENCSE.txt"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/armouton/task-tech-exposure"